<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ajsherrell.weatherapp.viewModel.WeatherListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeatherListFragment">

        <Button
            android:id="@+id/see_details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/detailsButtonMarginEnd"
            android:layout_marginBottom="@dimen/detailsButtonMarginBottom"
            android:background="@drawable/ic_chevron_right_black_24dp"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/masterMainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/masterMainMarginTop"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/rainy"
            app:mutableText="@{viewModel.getWeatherListShortDescription()}"
            tools:text="Cloudy" />

        <TextView
            android:id="@+id/masterLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/masterLocationMarginTop"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/masterMainTextView"
            android:text="@string/dunwoody"
            tools:text="Atlanta" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:mutableVisibility="@{viewModel.getLoadingVisibility()}"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list_five_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recyclerViewMarginTop"
            app:adapter="@{viewModel.getWeatherAdapter()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:listitem="@layout/recycler_item" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/guidelineBegin" />

        <ImageView
            android:id="@+id/masterWeatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/masterWeatherIconMarginTop"
            android:layout_marginEnd="@dimen/masterWeatherIconMarginEnd"
            android:contentDescription="@string/weather_icon"
            app:imageRes="@{viewModel.getWeatherListIcon()}"
            app:layout_constraintBottom_toTopOf="@+id/see_details_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toEndOf="@+id/masterLocationTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.083" />

        <TextView
            android:id="@+id/masterTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/masterTempMarginStart"
            android:layout_marginTop="@dimen/masterTempMarginTop"
            android:text="@string/_55_degrees"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mutableText="@{viewModel.getWeatherListTemp()}"
            tools:text="53 degrees" />

        <TextView
            android:id="@+id/masterMinMaxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/masterMinMaxMarginStart"
            android:layout_marginTop="@dimen/masterMinMaxMarginTop"
            android:text="@string/low_22_f_high_67_f"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/masterTempTextView"
            app:mutableText="@{viewModel.getWeatherListMinMaxTemp()}"
            tools:text="high 60 / low 34" />

        <TextView
            android:id="@+id/masterDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/see_details_button"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/masterMinMaxTextView"
            android:text="@string/monday"
            app:layout_constraintVertical_bias="0.714"
            app:mutableText="@{viewModel.getWeatherListDay()}"
            tools:text="Thursday" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>